hello-world-gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: app
          image: quay.io/YOUR_QUAY_USERNAME/hello-world:initial # Placeholder image
          ports:
            - containerPort: 8080
