hello-world-gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hello-world
